# document-matching

./: .dockerignore  .flake8  .gitignore  .windsurfrules  CI_CD_UPDATE_INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SPEC_IMPLEMENTATION_GAP_ANALYSIS.md  WIP_TAGS_AUDIT.md  conftest.py  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/workflows/: build-test-publish.yml  master.yaml
docs/: circuit_breaker.md  validation_specification.md
docs/api_spec/: API Error Codes.md  API Sample Delivery Recipt input final.md  API Sample Invoice input final.md  API Sample Match Report output.md  API Sample Purchase Order input final.md  API description.md  Match Report API field descriptions.md
docs/decisions/: ADR-001-matching-topology.md  ADR-002-model-architecture.md
docs/user_stories/: README.md  api-consumer-experience.md.md  developer-experience.md  developer-test-client.md  evaluation-framework.md  operational-concerns.md
examples/: circuit_breaker_example.py
features/: TODO
features/api/: document_matching.feature  document_matching_advanced.feature  document_matching_core.feature  document_matching_item_level.feature  document_matching_scenarios.feature
features/api-consumer/: advanced.feature  attachments.feature  basic.feature  candidates_shared_po.json  certainty_metrics.feature  deviations.feature  document_matching_attachments.feature  document_matching_certainty_metrics.feature  document_matching_deviations.feature  document_matching_invalid_input.feature  document_matching_no_match.feature  document_matching_scenarios.feature  error_cases.feature  invalid_input.feature  item_level.feature  no_match.feature  primary_doc_standard.json  three_way_matching.feature
features/developer/: adhoc_testing.feature  debugging_support.feature  expected_output_sample.json  test_comparison.feature
features/evaluation/: dataset_loading.feature  ground_truth_sample.json  history_simulation.feature  matching_performance.feature  metrics_breakdown.feature  misclassification_diagnostics.feature  performance_metrics.feature  save_results.feature
features/operational/: configurable_logging.feature  configurable_matching.feature  readiness_health.feature  request_tracing.feature  service_liveness.feature  service_readiness.feature  simple_primary_doc.json  (+1 more)
src/: app.py  circuit_breaker.py  conftest.py  docpairing.py  document_utils.py  error_codes.py  evaluate_matching.py  external_service_client.py  itempair_deviations.py  itempairing.py  line_item_matching.py  match_pipeline.py  match_reporter.py  matching_service.py  rate_limiter.py  try_client.py  universaljsonencoder.py  wfields.py
src/tests/: test_serving.py  (+1 more)
tests/: config.py  conftest.py
(+87 files in other folders)
